# esmc-camera

./: README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.css  App.tsx  Button.tsx  CameraProvider.tsx  CommandButton.tsx  PortSwitcher.tsx  PresetButton.tsx  ffi.tsx  useAvailablePorts.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/camera/: manager.rs  mod.rs  visca.rs
src/icons/: Bluetooth.tsx  Ghost.tsx  Pci.tsx  Usb.tsx
