[package]
name = "esmc-camera"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "esmc_camera_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full", "macros"] }
pin-project-lite = "0.2.16"
tokio-util = { version = "0.7.17", features = ["codec"] }
futures = "0.3.31"
log = "0.4.29"
tokio-serial = { version = "5.4.5", features = ["codec"] }

[dev-dependencies]
hex = "0.4.3"

